--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,1 +1,10 @@
-// TODO
+.container {
+  max-width: 700px;
+  margin: 0 auto;
+  height: 105px;
+
+  a {
+    height: 100%;
+    display: flex;
+  }
+}
